Init commit - sprint9

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,10 @@
     <string name="share_app" translatable="false">Поделиться приложением</string>
     <string name="write_to_support" translatable="false">Написать в поддержку</string>
     <string name="terms_of_use" translatable="false">Пользовательское соглашение</string>
+
+    <string name="terms_of_use_url" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
+    <string name="support_email" translatable="false">yuliya-sycheva19@yandex.ru</string>
+    <string name="support_text" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
+    <string name="support_subject" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
+    <string name="share_email" translatable="false">https://practicum.yandex.ru/android-developer/?from=catalog</string>
 </resources>
