--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,7 @@
     <string name="artist_Led_Zeppelin" translatable="false">Led_Zeppelin</string>
     <string name="artist_Guns_N_Roses" translatable="false">Guns N\' Roses</string>
 
+    <string name="nothing_found" translatable="false">Ничего не нашлось</string>
+    <string name="something_went_wrong" translatable="false">Проблемы со связью \n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
+
 </resources>
