--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,7 @@
     <string name="something_went_wrong">Проблемы со связью \n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
 
     <string name="update">Обновить</string>
+    <string name="your_search_results">Вы искали</string>
+    <string name="clean_history">Очистить историю</string>
 
 </resources>
